alignment correction

--- a/src/components/Home/HomeIcons.scss
+++ b/src/components/Home/HomeIcons.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .HomeIconsDiv {
   display: flex;
@@ -11,12 +11,11 @@
   background-color: white;
 
   .spanText {
-    font-family: 'Roboto Condensed', fallback-font, sans-serif;
+    font-family: "Roboto Condensed", fallback-font, sans-serif;
     color: #657383;
     text-align: center;
     /* This centers the text inside the <p> element */
   }
-
 }
 
 .column {
@@ -30,19 +29,21 @@
   flex-direction: column;
 
   .Header {
-    font-family: 'Roboto', fallback-font, sans-serif;
-    color: #494F66;
+    font-family: "Roboto", fallback-font, sans-serif;
+    color: #494f66;
     text-align: center;
     /* This centers the text inside the <p> element */
     font-weight: bold;
   }
 
   .spanDescText {
-    font-family: 'Roboto', fallback-font, sans-serif;
+    font-family: "Roboto", fallback-font, sans-serif;
     color: #595959;
     text-align: center;
-    /* This centers the text inside the <p> element */
-    margin-left: center;
-    margin-right: center;
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto;
+    display: block;
+    height: 60px; /* Fixed height to accommodate different text lengths */
   }
 }
